# focus

./: .gitignore  README.md  WORKSPACE
Notes/: lldb_issues.md
__resources__/: BUILD.bazel
binaries/: BUILD.bazel  framework_builder.py
focus/: BUILD.bazel
focus/Base/: AppDelegate.m  BaseViewController.h  BaseViewController.m
focus/MixedA/: MixedAObjC.h  MixedAObjC.m  MixedASwift.swift
focus/MixedB/: MixedBObjC.h  MixedBObjC.m  MixedBSwift.swift
focus/ObjcA/: ObjcA.h  ObjcA.m
focus/ObjcA/__internal__/: ObjcAInternal.h  ObjcAInternal.m
focus/ObjcA/__tests__/: ObjcATests.m
focus/ObjcB/: ObjcB.h  ObjcB.m
focus/ObjcB/__internal__/: ObjcBInternal.h  ObjcBInternal.m
focus/ObjcDynamic/: ObjcDynamic.h  ObjcDynamic.m
focus/ObjcDynamic/__internal__/: ObjcDynamicInternal.h  ObjcDynamicInternal.m
focus/ObjcS/: ObjcS.h  ObjcS.m
focus/SwiftA/: SwiftA.swift
focus/SwiftA/__tests__/: SwiftATests.swift
focus/SwiftB/: SwiftB.swift
focus/SwiftDynamic/: SwiftDynamic.swift
focus/SwiftDynamic/__internal__/: SwiftDynamicInternal.swift
focus/SwiftDynamic/__resources__/: Info.plist
focus/ZZZ/: ZZZ.h  ZZZ.m  ZZZObjc.h  ZZZObjc.m
focus/__frameworks__/ObjcDynamic.framework/: Info.plist  ObjcDynamic
focus/__frameworks__/ObjcDynamic.framework/Headers/: ObjcDynamic-umbrella.h  ObjcDynamic.h
focus/__frameworks__/ObjcDynamic.framework/Modules/: module.modulemap
focus/__frameworks__/ObjcDynamic.framework/PrivateHeaders/: ObjcDynamicInternal.h
focus/__frameworks__/SwiftDynamic.framework/: Info.plist  SwiftDynamic
focus/__frameworks__/SwiftDynamic.framework/Headers/: SwiftDynamic-Swift.h  SwiftDynamic-umbrella.h
focus/__frameworks__/SwiftDynamic.framework/Modules/: module.modulemap
focus/__frameworks__/SwiftDynamic.framework/Modules/SwiftDynamic.swiftmodule/: x86_64.swiftmodule
focus/_app/: Info.plist  main.m
macros/: focus.bzl  focused_frameworks.bzl
